syntax = "proto3";

option go_package = "github.com/ajayjadhav201/common/api";

package api;

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (Order);
}

//request
message ItemsWithQuantity{
    string ItemID = 1;
    int32 Quantity = 2;
}

message CreateOrderRequest {
    string CustomerID = 1;
    repeated ItemsWithQuantity Items = 2;
}
// 
// 
//responce
message Item {
    string ID = 1;
    string Name = 2;
    int32 Quantity = 3;
    string PriceID = 4;

}
message Order{
    string ID = 1;
    string CustomerID = 2;
    string status = 3;
    repeated Item Items = 4;
}
